WIP - Added navigation context and global styles adjustments

--- a/components/LanguageSelector/LanguageSelector.module.scss
+++ b/components/LanguageSelector/LanguageSelector.module.scss
@@ -2,17 +2,28 @@
 @import "@app/styles/variables/font-weights";
 
 .languageSelector {
+    $bottom-offset: 25px;
+
     position: fixed;
-    top: 25px;
+    top: $bottom-offset;
     left: 50%;
     background-color: var(--primary-color-darker);
     border-radius: 10px;
     transform: translateX(-50%);
+    transition: transform ease 500ms;
     z-index: z-index(language-selector);
 
     display: flex;
     justify-content: center;
     align-items: center;
+
+    &.hidden {
+        transform: translate(-50%, calc(-100% - #{$bottom-offset}));
+
+        .toggler {
+            transform: translateX(-50%) rotateX(180deg);
+        }
+    }
 
     button {
         background-color: transparent;
@@ -23,13 +34,31 @@
         transition: color ease 250ms;
         cursor: pointer;
 
+        &:focus {
+            outline: none;
+        }
+
         &.current,
         &:hover {
             color: var(--accent-color);
         }
 
-        + button {
-            margin-left: 25px;
+        &.toggler {
+            position: absolute;
+            top: calc(100%);
+            left: 50%;
+            margin: 0;
+            transform: translateX(-50%);
+            transition: transform ease 500ms;
+
+            svg {
+                height: 15px;
+                opacity: 0.75;
+
+                path {
+                    fill: var(--accent-color);
+                }
+            }
         }
     }
 }
