--- a/styles/_custom-properties.scss
+++ b/styles/_custom-properties.scss
@@ -12,4 +12,10 @@
 
     --accent-color: #df744a;
     --accent-color-contrast: #fff;
+
+    --danger-color: #ff0000;
+
+    --light-gray: #c9c9c9;
+    --medium-gray: #999;
+    --dark-gray: #444;
 }
