--- a/components/Navigation/Navigation.module.scss
+++ b/components/Navigation/Navigation.module.scss
@@ -2,34 +2,87 @@
 @import "@app/styles/variables/font-weights";
 
 .navigation {
+    $bottom-offset: 25px;
+
     position: fixed;
-    bottom: 25px;
+    bottom: $bottom-offset;
     left: 50%;
     background-color: var(--primary-color-darker);
     border-radius: 10px;
     transform: translateX(-50%);
+    transition: transform ease 500ms;
     z-index: z-index(navigation);
 
     display: flex;
     justify-content: center;
     align-items: center;
 
+    &.hidden {
+        transform: translate(-50%, calc(100% - #{$bottom-offset} * -1));
+
+        .toggler {
+            transform: translateX(-50%) rotateX(180deg);
+        }
+    }
+
     button {
         background-color: transparent;
         border: none;
         padding: 15px;
         font-weight: font-weight(bold);
-        text-transform: uppercase;
         transition: color ease 250ms;
-        cursor: pointer;
+        text-transform: uppercase;
 
-        &.current,
-        &:hover {
-            color: var(--accent-color);
+        &:focus {
+            outline: none;
         }
 
-        + button {
-            margin-left: 25px;
+        &:not(:disabled) {
+            cursor: pointer;
+
+            &.current,
+            &:hover {
+                color: var(--accent-color);
+
+                svg path {
+                    fill: var(--accent-color);
+                }
+            }
+        }
+
+        &:disabled {
+            cursor: default;
+
+            svg path {
+                fill: var(--light-gray);
+            }
+        }
+
+        &.toggler {
+            position: absolute;
+            bottom: calc(100%);
+            left: 50%;
+            margin: 0;
+            transform: translateX(-50%);
+            transition: transform ease 500ms;
+
+            svg {
+                height: 15px;
+                opacity: 0.75;
+
+                path {
+                    fill: var(--accent-color);
+                }
+            }
+        }
+
+        svg {
+            display: block;
+            height: 12px;
+
+            path {
+                transition: fill ease 250ms;
+            }
         }
     }
 }
