--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -15,4 +15,84 @@ body {
 
 body {
     font-family: var(--primary-font);
+    overflow: hidden;
+
+    &.dark-theme {
+        .title,
+        .title-medium,
+        .body-text,
+        .body-text-small {
+            color: rgb(var(--primary-white));
+        }
+    }
+}
+
+ol,
+ul {
+    padding-left: 25px;
+}
+
+a {
+    color: rgb(var(--primary-orange));
+    text-decoration: none;
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
+
+.title {
+    $normal: 70px;
+    $medium: 50px;
+
+    font-size: clamp(#{$normal * 0.5}, 5vw, #{$normal});
+    margin-bottom: 15px;
+
+    &,
+    &-medium {
+        letter-spacing: 0.7px;
+        line-height: 1.25;
+    }
+
+    &-medium {
+        font-size: clamp(#{$medium * 0.75}, 5vw, #{$medium});
+    }
+}
+
+.subtitle {
+    $normal: 18px;
+    $medium: 16px;
+    $small: 14px;
+
+    font-size: clamp(#{$medium}, 5vw, #{$normal});
+
+    &,
+    &-small {
+        text-transform: uppercase;
+        color: rgb(var(--primary-orange));
+        letter-spacing: 0.7px;
+        line-height: 1.5;
+    }
+
+    &-small {
+        font-size: $small;
+    }
+}
+
+.body-text {
+    $normal: 20px;
+    $medium: 16px;
+    $small: 14px;
+
+    font-size: clamp(#{$medium}, 5vw, #{$normal});
+
+    &,
+    &-small {
+        letter-spacing: 1px;
+        line-height: 1.75;
+    }
+
+    &-small {
+        font-size: $small;
+    }
 }
