--- a/components/Slides/ErrorSlide/ErrorSlide.module.scss
+++ b/components/Slides/ErrorSlide/ErrorSlide.module.scss
@@ -4,10 +4,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgb(var(--primary-black));
 
     h3 {
-        color: var(--medium-gray);
         font-weight: font-weight(thin);
-        font-size: 28px;
+        color: rgb(var(--primary-orange));
     }
 }
