--- a/styles/shared/_mixins.scss
+++ b/styles/shared/_mixins.scss
@@ -1,7 +1,7 @@
 @import "../variables/media-queries";
 
 @mixin custom-scrollbar($bg-color: #eee, $thumb-color: #999, $size: 5px) {
-    @media #{$min-width-md} {
+    // @media #{$min-width-md} {
         &::-webkit-scrollbar {
             width: $size;
             height: $size;
@@ -13,6 +13,6 @@
             &-thumb {
                 background-color: $thumb-color;
             }
-        }
+        // }
     }
 }
