--- a/styles/variables/_font-weights.scss
+++ b/styles/variables/_font-weights.scss
@@ -1,12 +1,12 @@
 $primary-font-weights: (
     thin: 100,
-    // extra-light: 200,
+    extra-light: 200,
     light: 300,
     regular: 400,
     medium: 500,
-    // semi-bold: 600,
+    semi-bold: 600,
     bold: 700,
-    // extra-bold: 800,
+    extra-bold: 800,
     black: 900
 );
 
