--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -1,3 +1,5 @@
+@import "./variables/font-weights";
+
 *,
 *::before,
 *::after {
@@ -71,6 +73,7 @@ a {
         text-transform: uppercase;
         color: rgb(var(--primary-orange));
         letter-spacing: 0.7px;
+        font-weight: font-weight(semi-bold);
         line-height: 1.5;
     }
 
