Adjusted language selector and navigation display

--- a/components/Navigation/Navigation.module.scss
+++ b/components/Navigation/Navigation.module.scss
@@ -16,6 +16,7 @@
 }
 
 .navigation {
+    display: flex;
     max-width: 90vw;
     border-radius: 15px;
     background-color: rgb(var(--primary-black));
