--- a/components/LanguageSelector/LanguageSelector.module.scss
+++ b/components/LanguageSelector/LanguageSelector.module.scss
@@ -11,6 +11,7 @@
 }
 
 .languageSelector {
+    display: flex;
     border-radius: 15px;
     background-color: rgb(var(--primary-black));
     transition: background-color ease 250ms;
