Minor responsive adjustments

--- a/components/Slides/BaseSlide.module.scss
+++ b/components/Slides/BaseSlide.module.scss
@@ -7,7 +7,7 @@
 .slide {
     width: 100%;
     height: var(--fullVH);
-    padding: 5%;
+    padding: 50px 5%;
     background-image: var(--slide-bg-pattern);
     background-size: cover;
     background-position: center;
