--- a/components/Slides/AgendaSlide/AgendaSlide.module.scss
+++ b/components/Slides/AgendaSlide/AgendaSlide.module.scss
@@ -5,6 +5,10 @@
     display: flex;
     align-items: center;
 
+    :global(.title-medium) {
+        margin-top: 15px;
+    }
+
     :global(.body-text-small) {
         margin-top: 200px;
 
