Adjusted prettier and linter configuration 	Updated files with the new configuration

--- a/components/Navigation/Navigation.module.scss
+++ b/components/Navigation/Navigation.module.scss
@@ -22,10 +22,7 @@
     background-color: rgb(var(--primary-black));
     transition: background-color ease 250ms;
     overflow-x: auto;
-    @include custom-scrollbar(
-        rgb(var(--primary-black)),
-        rgb(var(--primary-orange))
-    );
+    @include custom-scrollbar(rgb(var(--primary-black)), rgb(var(--primary-orange)));
 
     button {
         background-color: transparent;
