--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -1,5 +1,3 @@
-@import "./variables/font-weights";
-
 *,
 *::before,
 *::after {
@@ -17,15 +15,11 @@ body {
 
 body {
     font-family: var(--primary-font);
+    color: rgb(var(--primary-black));
     overflow: hidden;
 
     &.dark-theme {
-        .title,
-        .title-medium,
-        .body-text,
-        .body-text-small {
-            color: rgb(var(--primary-white));
-        }
+        color: rgb(var(--primary-white));
     }
 }
 
@@ -40,61 +34,5 @@ a {
 
     &:hover {
         text-decoration: underline;
-    }
-}
-
-.title {
-    $normal: 70px;
-    $medium: 50px;
-
-    font-size: clamp(#{$normal * 0.5}, 5vw, #{$normal});
-    margin-bottom: 15px;
-
-    &,
-    &-medium {
-        letter-spacing: 0.7px;
-        line-height: 1.25;
-    }
-
-    &-medium {
-        font-size: clamp(#{$medium * 0.75}, 5vw, #{$medium});
-    }
-}
-
-.subtitle {
-    $normal: 18px;
-    $medium: 16px;
-    $small: 14px;
-
-    font-size: clamp(#{$medium}, 5vw, #{$normal});
-
-    &,
-    &-small {
-        text-transform: uppercase;
-        color: rgb(var(--primary-orange));
-        letter-spacing: 0.7px;
-        font-weight: font-weight(semi-bold);
-        line-height: 1.5;
-    }
-
-    &-small {
-        font-size: $small;
-    }
-}
-
-.body-text {
-    $normal: 20px;
-    $medium: 16px;
-    $small: 14px;
-
-    font-size: clamp(#{$medium}, 5vw, #{$normal});
-
-    &,
-    &-small {
-        line-height: 1.75;
-    }
-
-    &-small {
-        font-size: $small;
     }
 }
