--- a/components/Slides/BaseSlide.module.scss
+++ b/components/Slides/BaseSlide.module.scss
@@ -18,6 +18,9 @@
     background-repeat: no-repeat;
     overflow-y: auto;
     overflow-x: hidden;
+    opacity: 0;
+    transform: translateX(var(--nav-animation-offset));
+    animation: slide-enter ease-out forwards 500ms;
 
     @media #{$max-width-lg} {
         --verticalPadding: 75px;
@@ -25,5 +28,17 @@
 
     @media #{$max-width-sm} {
         --verticalPadding: 100px;
+    }
+}
+
+@keyframes slide-enter {
+    from {
+        opacity: 0;
+        transform: translateX(var(--nav-animation-offset));
+    }
+
+    to {
+        opacity: 1;
+        transform: translateX(0);
     }
 }
