Changed properties and functions names

--- a/styles/_custom-properties.scss
+++ b/styles/_custom-properties.scss
@@ -1,6 +1,6 @@
 :root {
     // Common
-    --fullVH: calc(var(--vh, 1vh) * 100);
+    --full-vh: calc(var(--vh, 1vh) * 100);
 
     // Fonts
     --primary-font: Arial, Helvetica, sans-serif;
