--- a/components/Slides/BaseSlide.module.scss
+++ b/components/Slides/BaseSlide.module.scss
@@ -1,5 +1,7 @@
 @import "../../styles/variables/media-queries";
 
+$slide-animation-offset: 150px;
+
 :global(.dark-theme) {
     .slide {
         background-color: rgb(var(--primary-black));
@@ -7,11 +9,11 @@
 }
 
 .slide {
-    --verticalPadding: 50px;
+    --vertical-padding: 50px;
 
     width: 100%;
-    height: var(--fullVH);
-    padding: var(--verticalPadding) 5%;
+    height: var(--full-vh);
+    padding: var(--vertical-padding) 5%;
     background-image: var(--slide-bg-pattern);
     background-size: cover;
     background-position: center;
@@ -19,22 +21,22 @@
     overflow-y: auto;
     overflow-x: hidden;
     opacity: 0;
-    transform: translateX(var(--nav-animation-offset));
+    transform: translateX(calc(#{$slide-animation-offset} * var(--animation-direction)));
     animation: slide-enter ease-out forwards 500ms;
 
     @media #{$max-width-lg} {
-        --verticalPadding: 75px;
+        --vertical-padding: 75px;
     }
 
     @media #{$max-width-sm} {
-        --verticalPadding: 100px;
+        --vertical-padding: 100px;
     }
 }
 
 @keyframes slide-enter {
     from {
         opacity: 0;
-        transform: translateX(var(--nav-animation-offset));
+        transform: translateX(calc(#{$slide-animation-offset} * var(--animation-direction)));
     }
 
     to {
