Styles and code improvements

--- a/components/Slides/AgendaSlide/AgendaSlide.module.scss
+++ b/components/Slides/AgendaSlide/AgendaSlide.module.scss
@@ -1,10 +1,7 @@
 @import "../../../styles/variables/media-queries";
 @import "../../../styles/variables/font-weights";
 
-.agendaSlide {
-    display: flex;
-    align-items: center;
-
+.content {
     :global(.title-medium) {
         margin-top: 15px;
     }
