--- a/components/Slides/ElementsSlide/ElementsSlide.module.scss
+++ b/components/Slides/ElementsSlide/ElementsSlide.module.scss
@@ -27,15 +27,14 @@
 
 .elements {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
     grid-gap: 100px 50px;
 
     @media #{$max-width-xl} {
-        grid-template-columns: repeat(2, 1fr);
         grid-gap: 50px;
     }
 
-    @media #{$max-width-md} {
+    @media #{$max-width-sm} {
         grid-template-columns: 1fr;
     }
 }
