--- a/components/Slides/TeamSlide/TeamSlide.module.scss
+++ b/components/Slides/TeamSlide/TeamSlide.module.scss
@@ -15,12 +15,11 @@
 
 .team {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
     grid-gap: 100px 50px;
     margin-top: 125px;
 
     @media #{$max-width-xl} {
-        grid-template-columns: repeat(2, 1fr);
         grid-gap: 50px;
     }
 
