--- a/styles/shared/_mixins.scss
+++ b/styles/shared/_mixins.scss
@@ -1,6 +1,6 @@
 @import "../variables/media-queries";
 
-@mixin custom-scrollbar($bg-color: #eee, $thumb-color: #999, $size: 5px) {
+@mixin custom-scrollbar($bg-color: #eee, $thumb-color: #999, $size: 8px) {
     // @media #{$min-width-md} {
     &::-webkit-scrollbar {
         width: $size;
@@ -17,7 +17,7 @@
     // }
 }
 
-@mixin separator($color: var(--primary-black), $onTop: true) {
+@mixin separator($color: rgb(var(--primary-black)), $onTop: true) {
     $pseudo-element: "before";
 
     @if $onTop == false {
@@ -29,6 +29,6 @@
         display: block;
         width: 50px;
         height: 4px;
-        background-color: rgb(#{$color});
+        background-color: $color;
     }
 }
