Added images and logos filter compatibility fallbacks

--- a/components/Slides/BaseSlide.module.scss
+++ b/components/Slides/BaseSlide.module.scss
@@ -22,6 +22,11 @@ $slide-animation-offset: 150px;
 
     display: flex;
     align-items: var(--slide-alignment);
+
+    @media #{$max-width-md} {
+        padding-left: 25px;
+        padding-right: 25px;
+    }
 }
 
 // @keyframes slide-enter {
