--- a/components/Slides/ElementsSlide/ElementsSlide.module.scss
+++ b/components/Slides/ElementsSlide/ElementsSlide.module.scss
@@ -1,5 +1,5 @@
 @import "../../../styles/variables/media-queries";
-@import "../../../styles/variables/font-weights";
+@import "../../../styles/shared/placeholders";
 @import "../../../styles/shared/mixins";
 
 :global(.dark-theme) {
@@ -10,13 +10,7 @@
         }
 
         .icon {
-            &::after {
-                mix-blend-mode: multiply;
-            }
-
-            img {
-                filter: brightness(100%) invert(1);
-            }
+            @extend %colored-icon-dark-mod;
         }
     }
 }
@@ -45,18 +39,7 @@
     }
 
     .icon {
-        position: relative;
-
-        &::after {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgb(var(--primary-orange));
-            mix-blend-mode: lighten;
-        }
+        @extend %colored-icon-light;
     }
 
     :global(.subtitle) {
