--- a/components/Slides/KeyFiguresSlide/KeyFiguresSlide.module.scss
+++ b/components/Slides/KeyFiguresSlide/KeyFiguresSlide.module.scss
@@ -1,5 +1,6 @@
 @import "../../../styles/variables/media-queries";
 @import "../../../styles/variables/font-weights";
+@import "../../../styles/shared/placeholders";
 
 :global(.dark-theme) {
     .keyFigure {
@@ -8,13 +9,7 @@
         }
 
         .icon {
-            &::after {
-                mix-blend-mode: multiply;
-            }
-
-            img {
-                filter: brightness(100%) invert(1);
-            }
+            @extend %colored-icon-dark-mod;
         }
     }
 }
@@ -55,18 +50,7 @@
     text-align: center;
 
     .icon {
-        position: relative;
-
-        &::after {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgb(var(--primary-orange));
-            mix-blend-mode: lighten;
-        }
+        @extend %colored-icon-light;
     }
 
     :global(.title) {
