Minor code changes

--- a/styles/shared/_placeholders.scss
+++ b/styles/shared/_placeholders.scss
@@ -26,7 +26,7 @@
 }
 
 %colored-icon-dark-mod {
-    @supports not (mix-blend-mode: lighten) {
+    @supports not (mix-blend-mode: multiply) {
         img {
             filter: brightness(100%);
         }
