--- a/components/Navigation/Navigation.module.scss
+++ b/components/Navigation/Navigation.module.scss
@@ -4,6 +4,7 @@
 :global(.dark-theme) {
     .navigation {
         background-color: rgb(var(--secondary-light-gray));
+        @include custom-scrollbar(7px, rgb(var(--primary-white)), rgb(var(--primary-orange)));
 
         button {
             color: rgb(var(--primary-black));
@@ -22,7 +23,7 @@
     background-color: rgb(var(--primary-black));
     transition: background-color ease 250ms;
     overflow-x: auto;
-    @include custom-scrollbar(rgb(var(--primary-black)), rgb(var(--primary-orange)));
+    @include custom-scrollbar(7px, rgb(var(--primary-black)), rgb(var(--primary-orange)));
 
     button {
         background-color: transparent;
