--- a/components/Slides/ChartSlide/ChartSlide.module.scss
+++ b/components/Slides/ChartSlide/ChartSlide.module.scss
@@ -114,6 +114,20 @@
         font-weight: font-weight(semi-bold);
     }
 
+    .percentage {
+        font-weight: font-weight(bold);
+        color: rgb(var(--primary-orange));
+
+        &::before {
+            content: "|";
+            display: inline-block;
+            position: relative;
+            top: -1px;
+            margin: 0 5px;
+            color: rgb(var(--primary-dark-gray));
+        }
+    }
+
     .detail {
         display: none;
         min-width: 200px;
