--- a/styles/shared/_placeholders.scss
+++ b/styles/shared/_placeholders.scss
@@ -1,42 +1,49 @@
 %colored-icon-light {
     position: relative;
+    display: inline-block;
+    background-color: rgb(var(--primary-white));
+
+    img {
+        filter: grayscale(1) brightness(0%);
+    }
+
+    &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgb(var(--primary-orange));
+    }
 
     @supports not (mix-blend-mode: lighten) {
-        img {
-            filter: grayscale(1) brightness(100%) invert(1);
+        &::after {
+            content: unset;
         }
     }
 
     @supports (mix-blend-mode: lighten) {
-        img {
-            filter: grayscale(1) brightness(100%);
-        }
-
         &::after {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgb(var(--primary-orange));
             mix-blend-mode: lighten;
         }
     }
 }
 
 %colored-icon-dark-mod {
+    background-color: rgb(var(--primary-black));
+
+    img {
+        filter: grayscale(1) brightness(100);
+    }
+
     @supports not (mix-blend-mode: multiply) {
-        img {
-            filter: grayscale(1) brightness(100%);
+        &::after {
+            content: unset;
         }
     }
 
     @supports (mix-blend-mode: multiply) {
-        img {
-            filter: grayscale(1) brightness(100%) invert(1);
-        }
-
         &::after {
             mix-blend-mode: multiply;
         }
